--- a/index.html
+++ b/index.html
@@ -4,7 +4,6 @@
   <meta charset="utf-8">
   <meta http-equiv="x-ua-compatible" content="ie=edge">
   <title>Gallery</title>
-  <meta name="description" content="">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
   <link rel="stylesheet" href="css/main.css">
   <script src="js/generate.js" type="text/javascript"></script>
@@ -18,10 +17,12 @@
   </script>
 </head>
 <body>
-  <div class="container">
-    <h1>My Gallery</h1>
-    <div id="gallery" class="gallery-grid">
-
+  <div class="scroll-snapper">
+    <header class="title">
+      <h1 class="container">My Gallery</h1>
+    </header>
+    <div class="container">
+      <div id="gallery" class="gallery-grid"></div>
     </div>
   </div>
 </body>
